<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetalheLivroActivity">

    <ImageView
        android:id="@+id/image_capa_livro_detalhe"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/imagem_detalhe" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/detalhes_sobre_o_livro"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_capa_livro_detalhe"
        app:srcCompat="@android:color/holo_orange_dark" />

    <TextView
        android:id="@+id/text_nome_livro_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome_do_livro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_autor_livro_detalhe"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/text_autor_livro_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/autor"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/text_nome_livro_detalhe"
        app:layout_constraintTop_toBottomOf="@+id/text_nome_livro_detalhe" />

    <TextView
        android:id="@+id/text_status_livro_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/status"
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/text_autor_livro_detalhe" />

    <TextView
        android:id="@+id/text_valor_livro_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/r_200_0"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_status_livro_detalhe"
        app:layout_constraintTop_toBottomOf="@+id/text_status_livro_detalhe" />

    <TextView
        android:id="@+id/text_paginas_livro_detalhe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200_paginas"
        app:layout_constraintBottom_toBottomOf="@+id/text_valor_livro_detalhe"
        app:layout_constraintStart_toStartOf="@+id/text_autor_livro_detalhe" />

    <TextView
        android:id="@+id/text_descricao_livro_detalhe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/descri_o_do_livro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/text_paginas_livro_detalhe"
        app:layout_constraintTop_toBottomOf="@+id/text_valor_livro_detalhe"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="spread_inside" />

</android.support.constraint.ConstraintLayout>