<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.CadastroActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/insira_os_dados"
            android:textAlignment="center"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_nome_livro_cadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nome_do_liivro"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/image_capa_livro_cadastro" />

        <EditText
            android:id="@+id/edit_autor_livro_cadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nome_do_autor"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/edit_nome_livro_cadastro"
            app:layout_constraintStart_toStartOf="@+id/edit_nome_livro_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/edit_nome_livro_cadastro" />

        <EditText
            android:id="@+id/edit_pagina_livro_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/paginas"
            android:inputType="numberSigned"
            android:maxLength="4"
            app:layout_constraintStart_toStartOf="@+id/edit_autor_livro_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/edit_autor_livro_cadastro" />

        <Spinner
            android:id="@+id/spinner_status_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/edit_pagina_livro_cadastro"
            app:layout_constraintTop_toTopOf="@+id/edit_pagina_livro_cadastro" />

        <EditText
            android:id="@+id/edit_preco_livro_cadastro"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:maxLength="7"
            app:layout_constraintEnd_toEndOf="@+id/spinner_status_cadastro"
            app:layout_constraintTop_toBottomOf="@+id/edit_pagina_livro_cadastro" />

        <EditText
            android:id="@+id/edit_descricao_livro_cadastro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/descricao"
            android:inputType="textAutoComplete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edit_preco_livro_cadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_preco_livro_cadastro" />

        <Button
            android:id="@+id/button_tirar_foto"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/fundo_camera"
            android:elevation="16dp"
            android:stateListAnimator="@null"
            app:layout_constraintBottom_toBottomOf="@+id/edit_nome_livro_cadastro"
            app:layout_constraintEnd_toEndOf="@+id/image_capa_livro_cadastro"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/image_capa_livro_cadastro"
            app:layout_constraintTop_toTopOf="@+id/image_capa_livro_cadastro"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/image_capa_livro_cadastro"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:srcCompat="@drawable/imagem_detalhe" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>